--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -173,11 +173,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Resourse.h" />
+    <ClInclude Include="ResourseManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resourse.cpp" />
+    <ClCompile Include="ResourseManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
