--- a/project/project.vcxproj.filters
+++ b/project/project.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Resourse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ResourseManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Resourse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ResourseManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
