--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -172,12 +172,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Audio.h" />
+    <ClInclude Include="Picture.h" />
     <ClInclude Include="Resourse.h" />
     <ClInclude Include="ResourseManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Audio.cpp" />
+    <ClCompile Include="Picture.cpp" />
     <ClCompile Include="Resourse.cpp" />
     <ClCompile Include="ResourseManager.cpp" />
     <ClCompile Include="stdafx.cpp">
