--- a/Source/ResourcesTest/ResourcesTest.vcxproj.filters
+++ b/Source/ResourcesTest/ResourcesTest.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="ResourseManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="project.cpp">
+    <ClCompile Include="test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
