--- a/Source/Events/Events.vcxproj
+++ b/Source/Events/Events.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{1E882AD5-D6D8-4F0E-9048-DBAD3A2AFE82}</ProjectGuid>
     <RootNamespace>Events</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -72,16 +72,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Dispatcher.h" />
+    <ClInclude Include="Event.h" />
+    <ClInclude Include="EventIDStore.h" />
+    <ClInclude Include="EventSystem.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Dispatcher.cpp" />
+    <ClCompile Include="Event.cpp" />
+    <ClCompile Include="EventIDStore.cpp" />
+  </ItemGroup>
+  <!--<ItemGroup>
     <ClInclude Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\Dispatcher.h" />
     <ClInclude Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\Event.h" />
     <ClInclude Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\EventIDStore.h" />
     <ClInclude Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\EventSystem.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\Dispatcher.cpp" />
     <ClCompile Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\Event.cpp" />
     <ClCompile Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\EventIDStore.cpp" />
-  </ItemGroup>
+    <ClCompile Include="Dispatcher.cpp" />
+  </ItemGroup>-->
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
