.gitignore fix. Add alias. Dispatcher class bugs fix. Rewrite Event class (and FirstEvent, SecondEvent). Remove EventIDStore struct. Add EventTypes enum.

--- a/Source/Events/Events.vcxproj.filters
+++ b/Source/Events/Events.vcxproj.filters
@@ -21,20 +21,14 @@
     <ClInclude Include="Dispatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EventIDStore.h">
+    <ClInclude Include="EventSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EventSystem.h">
+    <ClInclude Include="EventTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Event.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="EventIDStore.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Dispatcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
