--- a/Source/Events/Events.vcxproj
+++ b/Source/Events/Events.vcxproj
@@ -74,13 +74,11 @@
   <ItemGroup>
     <ClInclude Include="Dispatcher.h" />
     <ClInclude Include="Event.h" />
-    <ClInclude Include="EventIDStore.h" />
     <ClInclude Include="EventSystem.h" />
+    <ClInclude Include="EventTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dispatcher.cpp" />
-    <ClCompile Include="Event.cpp" />
-    <ClCompile Include="EventIDStore.cpp" />
   </ItemGroup>
   <!--<ItemGroup>
     <ClInclude Include="..\..\..\..\Users\aleksandr.klechenov\Desktop\eventSystem\Dispatcher.h" />
