Dispatcher class was corrected according to comments and ID was removed from Event class

--- a/Source/Events/Events.vcxproj.filters
+++ b/Source/Events/Events.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="EventTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DispatcherErrorMessagesStore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Dispatcher.cpp">
