--- a/Source/Events/Events.vcxproj
+++ b/Source/Events/Events.vcxproj
@@ -73,6 +73,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Dispatcher.h" />
+    <ClInclude Include="DispatcherErrorMessagesStore.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="EventSystem.h" />
     <ClInclude Include="EventTypes.h" />
