--- a/Source/Input/ConfigManager/ConfigManager.vcxproj
+++ b/Source/Input/ConfigManager/ConfigManager.vcxproj
@@ -115,8 +115,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Debug\ConfigManager\main.cpp" />
     <ClCompile Include="ConfigManager.cpp" />
-    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConfigManager.h" />
