--- a/Source/Resources/Resources.vcxproj.filters
+++ b/Source/Resources/Resources.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="TextureResource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnimationResource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TextureResource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimationResource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
