--- a/Source/Events/Events.vcxproj
+++ b/Source/Events/Events.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{1E882AD5-D6D8-4F0E-9048-DBAD3A2AFE82}</ProjectGuid>
     <RootNamespace>Events</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -72,6 +72,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Dispatcher.h" />
+    <ClInclude Include="DispatcherErrorMessagesStore.h" />
+    <ClInclude Include="Event.h" />
+    <ClInclude Include="EventSystem.h" />
+    <ClInclude Include="EventTypes.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Dispatcher.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
