--- a/Source/InputTest/ConfigManagerTest/ConfigManagerTest.vcxproj
+++ b/Source/InputTest/ConfigManagerTest/ConfigManagerTest.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{2D23F964-9BEF-4DDF-9CC0-3FEC7F71E729}</ProjectGuid>
+    <ProjectGuid>{7FAAD8F6-2D94-49A3-85EE-6C66B59BC06D}</ProjectGuid>
     <RootNamespace>ConfigManagerTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -66,6 +66,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ConfigManager.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ConfigManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
